refactor!: fix failing snomed-e2e tests